ci: make check-tree optional for branches other than main
Old branches tend to be formatted with a different versions of
clang-format, so when patches are backported, they introduce some
differences in formatting, making the check-tree job to fail.

These changes in formatting are normally small, and we don't pay much
attention to them, causing that the pipelines are always red, increasing
the work required to check if there are important failures or not.

Make check-tree optional for branches other than main. This way,
failures will be shown as a "warning", and if a pipeline only shows a
warning we don't need to inspect it.

(cherry picked from commit 9e47c9bc6aecd3a6621d4702a8299b18ce199619)
(cherry picked from commit b497ce4372e09be11399a55ac05e7de6eb845c04)
(cherry picked from commit f43af853e627818eafca361ad4eef3685dd5040b)
(cherry picked from commit a85941660a0398b4313816e61c45c2ecd3fbb3c4)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,10 +53,10 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-ae5d79b9f950'
-  CENTOS_TAG:  'tag-0e91ee4c8c7c'
-  DEBIAN_TAG:  'tag-05fba9bac327'
-  UBUNTU_TAG:  'tag-05fba9bac327'
+  ALPINE_TAG:  'tag-9b85960aac09'
+  CENTOS_TAG:  'tag-574648c5d22d'
+  DEBIAN_TAG:  'tag-7d3d5a87531b'
+  UBUNTU_TAG:  'tag-7d3d5a87531b'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
@@ -284,6 +284,12 @@ check-tree:
     FDO_DISTRIBUTION_TAG: $DEBIAN_TAG
   needs:
     - "tier1:debian:12@prep"
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME != $CI_DEFAULT_BRANCH
+      allow_failure: true
+    - if: $CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      allow_failure: true
+    - if: $CI_PIPELINE_SOURCE != 'schedule'
   stage: tier1
   script:
     - date '+%Y%m%d-%H%M%S'; clang-format --version
