--- a/.gitlab-ci/config.yml
+++ b/.gitlab-ci/config.yml
@@ -18,62 +18,32 @@ base_types:
 
 # The list of all distributions we want to create job for.
 distributions:
-  - name: fedora
-    # The first tier:1 in the list is used to build the pages and check-{tree,patch}
+  # TIER 1: CI run for all MRs.
+  # The first tier:1 in the list is used to build the pages and check-{tree,patch}.
+  - name: debian
     tier: 1
     versions:
-      - '38'
-  - name: fedora
-    tier: 2
-    versions:
-      - '37'
-      - '39'
-  - name: fedora
-    tier: 3
-    versions:
-      - '30'
-      - '31'
-      - '32'
-      - '33'
-      - '34'
-      - '35'
-      - '36'
-  - name: ubuntu
-    tier: 2
-    versions:
-      - '18.04'
-      - '20.04'
-      - '22.04'
-      - 'devel'
-      - 'rolling'
-  - name: debian
-    tier: 2
-    versions:
-      - '10'
-      - '11'
-      - 'sid'
-  - name: debian
-    tier: 3
-    versions:
-      - '9'
-      - 'testing'
-  - name: centos
-    tier: 2
-    versions:
-      - '7.5.1804'
-      - '7.9.2009'
-      - '8.1.1911'
-      - '8.3.2011'
-      - 'stream8'
-      - 'stream9'
-  - name: centos
-    tier: 3
-    versions:
-      - '7.6.1810'
-      - '7.7.1908'
-      - '7.8.2003'
-      - '8.2.2004'
+      - '12'
+
+  # TIER 2: distribution versions that will or might use the current NM version.
+  # Run when doing a release.
   - name: alpine
     tier: 2
     versions:
-      - 'latest'
+      - '3.19'
+
+  # TIER 3: distribution versions not in EOL but don't use the current NM version.
+  # Run when doing a release, but a failure won't be blocking for the release.
+  - name: ubuntu
+    tier: 3
+    versions:
+      - '22.04'
+      - '20.04'
+  - name: alpine
+    tier: 3
+    versions:
+      - '3.18'
+  - name: centos
+    tier: 3
+    versions:
+      - 'stream9'
