--- a/man/common.ent.in
+++ b/man/common.ent.in
@@ -10,3 +10,4 @@
 <!ENTITY NM_CONFIG_DEFAULT_MAIN_DHCP "@NM_CONFIG_DEFAULT_MAIN_DHCP@">
 <!ENTITY NM_CONFIG_DEFAULT_MAIN_MIGRATE_IFCFG_RH_TEXT "@NM_CONFIG_DEFAULT_MAIN_MIGRATE_IFCFG_RH_TEXT@">
 <!ENTITY NM_CONFIG_DEFAULT_WIFI_BACKEND_TEXT "@NM_CONFIG_DEFAULT_WIFI_BACKEND_TEXT@">
+<!ENTITY NM_DHCP_CLIENTS_ENABLED_TEXT "@NM_DHCP_CLIENTS_ENABLED@">
