--- a/data/nm-priv-helper.service.in
+++ b/data/nm-priv-helper.service.in
@@ -2,7 +2,7 @@
 Description=NetworkManager Privileged Helper
 
 #
-# nm-priv-helper exists for privilege separation. It allows to run
+# nm-priv-helper exists for privilege separation. It allows one to run
 # NetworkManager without certain capabilities, and ask nm-priv-helper
 # for special operations where more privileges are required.
 #
