libnm, nmcli: introduce new "prefix-delegation" setting
Introduce a new "prefix-delegation" setting. It contains properties
related to the configuration of downstream interfaces using IPv6
prefix-delegation. The only property at the moment is "subnet-id",
which specifies which prefix to choose when the delegation contains
multiple /64 networks.

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -2315,6 +2315,14 @@
                   gprop-type="gchararray"
                   />
     </setting>
+    <setting name="prefix-delegation"
+             gtype="NMSettingPrefixDelegation"
+             >
+        <property name="subnet-id"
+                  dbus-type="x"
+                  gprop-type="gint64"
+                  />
+    </setting>
     <setting name="proxy"
              gtype="NMSettingProxy"
              >
