--- a/src/libnm-core-public/nm-version-macros.h.in
+++ b/src/libnm-core-public/nm-version-macros.h.in
@@ -76,6 +76,7 @@
 #define NM_VERSION_1_46   (NM_ENCODE_VERSION(1, 46, 0))
 #define NM_VERSION_1_48   (NM_ENCODE_VERSION(1, 48, 0))
 #define NM_VERSION_1_50   (NM_ENCODE_VERSION(1, 50, 0))
+#define NM_VERSION_1_50_4 (NM_ENCODE_VERSION(1, 50, 4))
 
 /* For releases, NM_API_VERSION is equal to NM_VERSION.
  *
