--- a/po/meson.build
+++ b/po/meson.build
@@ -1,3 +1,8 @@
 # SPDX-License-Identifier: LGPL-2.1-or-later
 
 i18n.gettext(nm_name, preset: 'glib')
+
+test(
+    'check-potfile-list',
+    find_program(join_paths(source_root, 'src/tests/check-potfile-list.py'))
+)
