--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -1984,6 +1984,10 @@
                   nmcli-description="Select the eswitch encapsulation support. Currently it&apos;s only supported for PCI PF devices, and only if the eswitch device is managed from the same PCI address than the PF. If set to &quot;preserve&quot; (-1) (default) the eswitch encap-mode won&apos;t be modified by NetworkManager."
                   format="choice (NMSriovEswitchEncapMode)"
                   values="preserve (-1), none (0), basic (1)" />
+        <property name="preserve-on-down"
+                  nmcli-description="This controls whether NetworkManager preserves the SR-IOV parameters set on the device when the connection is deactivated, or whether it resets them to their default value. The SR-IOV parameters are those specified in this setting (the &quot;sriov&quot; setting), like the number of VFs to create, the eswitch configuration, etc. If set to &quot;no&quot; (0), NetworkManager resets the SR-IOV parameters when the connection is deactivated. When set to &quot;yes&quot; (1), NetworkManager preserves those parameters on the device. If the value is &quot;default&quot; (-1), NetworkManager looks up a global default value in the configuration; in case no such value is defined, it uses &quot;no&quot; (0) as fallback."
+                  format="choice (NMSriovPreserveOnDown)"
+                  values="default (-1), no (0), yes (1)" />
     </setting>
     <setting name="tc" >
         <property name="qdiscs"
