nm-initrd-generator: add NBFT parser tests
This adds simple unit tests for most common NBFT deployments.
Sample data were mostly taken from the upstream libnvme repository.

(cherry picked from commit dce149352de801a9f8cfb35333c1961efd0cb3a8)

--- a/src/nm-initrd-generator/tests/meson.build
+++ b/src/nm-initrd-generator/tests/meson.build
@@ -6,6 +6,10 @@ test_units = [
   'test-cmdline-reader',
 ]
 
+if enable_nbft
+  test_units += [ 'test-nbft-reader' ]
+endif
+
 foreach test_unit : test_units
   exe = executable(
     test_unit,
