--- a/.gitlab-ci/config.yml
+++ b/.gitlab-ci/config.yml
@@ -23,7 +23,7 @@ distributions:
   - name: fedora
     tier: 1
     versions:
-      - '42'
+      - '43'
 
   # TIER 2: distribution versions that will or might use the current NM version.
   # Run when doing a release.
@@ -34,6 +34,7 @@ distributions:
   - name: centos
     tier: 2
     versions:
+      - 'stream10'
       - 'stream9'
   - name: ubuntu
     tier: 2
@@ -54,21 +55,23 @@ distributions:
   - name: fedora
     tier: 3
     versions:
+      - '42'
       - '41'
   - name: ubuntu
     tier: 3
     versions:
       - '25.04'
-      - '24.10'
       - '24.04'
       - '22.04'
   - name: debian
     tier: 3
     versions:
+      - '13'
       - '12'
   - name: alpine
     tier: 3
     versions:
+      - '3.22'
       - '3.21'
       - '3.20'
       - '3.19'
