core: add test for nm_netns_shared_ip_reserve()

--- a/src/core/tests/meson.build
+++ b/src/core/tests/meson.build
@@ -6,6 +6,7 @@ test_units = [
   'test-core',
   'test-core-with-expect',
   'test-dcb',
+  'test-netns',
   'test-l3cfg',
   'test-utils',
   'test-wired-defname',
