libnm: introduce `hsr.protocol-version` property
This property allows the user to set the protocol
version when using HSR. Currently, the property
supports two values - `2010` (referred to as HSRv0
in the kernel), and `2012` (HSRv1).

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -1532,6 +1532,10 @@
                   dbus-type="s"
                   gprop-type="gchararray"
                   />
+        <property name="protocol-version"
+                  dbus-type="i"
+                  gprop-type="gint"
+                  />
         <property name="prp"
                   dbus-type="b"
                   gprop-type="gboolean"
