--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -1238,6 +1238,10 @@
                   nmcli-description="The protocol used by the interface, whether it is PRP or HSR."
                   format="boolean"
                   values="true/yes/on, false/no/off" />
+        <property name="protocol-version"
+                  nmcli-description="Configures the protocol version to be used for the HSR/PRP interface. &quot;default&quot; (-1) sets the protocol version to the default version for the protocol. &quot;hsr-2010&quot; (0) sets the protocol version to HSRv0 (IEC 62439-3:2010). &quot;hsr-2012&quot; (1) sets the protocol version to HSRv1 (IEC 62439-3:2012)."
+                  format="choice (NMSettingHsrProtocolVersion)"
+                  values="default (-1), hsr-2010 (0), hsr-2012 (1)" />
     </setting>
     <setting name="infiniband" >
         <property name="mac-address"
