--- a/meson.build
+++ b/meson.build
@@ -288,7 +288,7 @@ uuid_dep = dependency('uuid')
 libelogind_dep = dependency('libelogind', version: '>= 219', required: false)
 libudev_dep = dependency('libudev', version: '>= 175')
 dbus_dep = dependency('dbus-1', version: '>= 1.1')
-libndp_dep = dependency('libndp')
+libndp_dep = dependency('libndp', version: '>= 1.9')
 
 jansson_dep = dependency('jansson', version: '>= 2.7', required: false)
 config_h.set10('WITH_JANSSON', jansson_dep.found())
